# nowpy

./: LICENSE  README.md  build_and_deploy.sh  pyproject.toml
nowpy/: main.py
pypip/: main.py
