[tool.poetry]
name = "pypip"
version = "0.1.0"
description = "Run any Python file instantly, with just one command"
authors = ["WillDenby <119456795+WillDenby@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
virtualenv = "^20.25.0"
toml = "^0.10.2"

[tool.poetry.scripts]
pypip = "pypip.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
