[tool.poetry]
name = "nowpy"
version = "0.1.5.post1"
description = "Run any Python file instantly, with just one command"
license = "MIT"
authors = ["WillDenby <119456795+WillDenby@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/WillDenby/nowpy"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
toml = "^0.10.2"
typeguard = "^4.3.0"
virtualenv = "^20.26.6"

[tool.poetry.scripts]
nowpy = "nowpy.main:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
